--- a/dotnet-aks/templates/ingress.yaml
+++ b/dotnet-aks/templates/ingress.yaml
@@ -31,6 +31,6 @@ spec:
   tls:
   - hosts:
     - {{ .Values.ingress.host }}
-    secretName: havan-default-tls
+    secretName: local-default-tls
   {{ end }}
 {{ end }}
