--- a/front-nextjs/templates/havan-portal-cliente/hpaMetrics.yaml
+++ b/front-nextjs/templates/havan-portal-cliente/hpaMetrics.yaml
@@ -1,4 +1,4 @@
-{{- if and (eq .Values.hpa.status "byMetrics") (eq .Values.appName "havan-portal-cliente") (eq .Values.environment "production") }}
+{{- if and (eq .Values.hpa.status "byMetrics") (eq .Values.appName "local-portal-cliente") (eq .Values.environment "production") }}
 apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
