--- a/front/templates/ingress.yaml
+++ b/front/templates/ingress.yaml
@@ -11,7 +11,7 @@ spec:
   tls:
     - hosts:
       - {{ .Values.ingress.host }}
-      secretName: havan-default-tls
+      secretName: local-default-tls
   rules:
     - host: {{ .Values.ingress.host }}
       http:
