--- a/java/values.yaml
+++ b/java/values.yaml
@@ -1,10 +1,9 @@
 containerPlataform: rancher
 replicaCount: 2
 
-appName: "dotnet-api"
+appName: "java-api"
 namespace: "appoena"
 environment: "production"
-
 
 resources:
   limits:
@@ -15,21 +14,21 @@ resources:
     memory: 64Mi
 
 image:
-  repository: "ewertonmarschalk/dotnet-api"
+  repository: "ewertonmarschalk/java-api"
   tag: 1.0.1
   pullPolicy: IfNotPresent
   ports:
     - name: http
-      containerPort: 80
+      containerPort: 8080
       protocol: TCP
       
 service:
   type: ClusterIP
-  port: 80
+  port: 8080
   targetPort: http
   portName: http
   protocol: TCP
 
 ingress:
   enabled: true
-  host: "dotnetapi.cluster.local"
+  host: "javaapi.cluster.local"
