--- a/python/values.yaml
+++ b/python/values.yaml
@@ -1,10 +1,9 @@
 containerPlataform: rancher
 replicaCount: 2
 
-appName: "dotnet-api"
+appName: "python-api"
 namespace: "appoena"
 environment: "production"
-
 
 resources:
   limits:
@@ -15,21 +14,21 @@ resources:
     memory: 64Mi
 
 image:
-  repository: "ewertonmarschalk/dotnet-api"
-  tag: 1.0.1
+  repository: "ewertonmarschalk/python-api"
+  tag: 1.0.2
   pullPolicy: IfNotPresent
   ports:
     - name: http
-      containerPort: 80
+      containerPort: 5000
       protocol: TCP
       
 service:
   type: ClusterIP
-  port: 80
+  port: 5000
   targetPort: http
   portName: http
   protocol: TCP
 
 ingress:
   enabled: true
-  host: "dotnetapi.cluster.local"
+  host: "pythonapi.cluster.local"
