--- a/dotnet/templates/deployment.yaml
+++ b/dotnet/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
   template:
     metadata:
       annotations:
-        "ad.datadoghq.com/{{ .Values.appName }}.logs" : '[{"source":"csharp", "service":"{{ .Values.appName }}"}]'
+        "ad.datadoghq.com/{{ .Values.appName }}.logs" : '[{"source":"dotnet"}]'
         admission.datadoghq.com/dotnet-lib.version: v2.35.0
       labels:
         app: {{ .Values.appName }} 
