--- a/cronjob/templates/deployment.yaml
+++ b/cronjob/templates/deployment.yaml
@@ -34,6 +34,7 @@ spec:
             tags.datadoghq.com/version: {{ .Values.image.tag }}
         spec:  
           restartPolicy: OnFailure
+          containers:
           - name: {{ .Values.appName }}
             image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
             imagePullPolicy: {{ .Values.image.pullPolicy }}
